--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "googlebooks-app",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "start": "node server.js",
+    "watch": "nodemon server.js"
+  },
+  "engines": {
+    "npm": "7.x"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^5.1.0"
-  },
   "dependencies": {
     "apollo-server-express": "^3.5.0",
-    "graphql": "^16.0.1"
+    "bcrypt": "^4.0.1",
+    "express": "^4.17.1",
+    "graphql": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.10"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
